--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5184,7 +5184,7 @@
   "2d500310-cfb7-4286-85b8-9704eea1b5c5": "'{gender}' is geen geslacht dat we kunnen herkennen. Probeer M of V, Man, Vrouw, Jongen, Meisje... Laat leeg voor onbekend.",
   "524de240-27b9-4fe3-9249-b2e49f1872bd": "Deze inschrijvingsgroep is leeg",
   "060e319c-16cb-4ff6-aafe-e2beec83e2fc": "De inschrijvingsgroep is leeg",
-  "0ef6349f-0540-4c34-bc51-9919d38dc3ff": "'{group}' is geen geldige inschrijvingsgroep (deze bestaat niet in Stamhoofd). Zorg dat deze overeenkomt met de namen in Stamhoofd.",
+  "0ef6349f-0540-4c34-bc51-9919d38dc3ff": "‘{group}’ is geen geldige inschrijvingsgroep (deze bestaat niet in Stamhoofd). Zorg dat deze overeenkomt met de namen in Stamhoofd.",
   "ff818d9d-658a-42cd-924e-75fc839aa9ea": "Rijksregisternummer",
   "1072ba5d-292b-4546-b2ea-646f0bf56931": "Ongeldig rijksregisternummer",
   "c4b433cc-d7c1-4113-97f1-056724681acc": "'{value}' is geen ja of nee. Probeer Ja of Nee, X, 0, 1 of leeg",
