--- a/shared/locales/src/digit/machine-fr.json
+++ b/shared/locales/src/digit/machine-fr.json
@@ -76,8 +76,8 @@
     "translation": "Optionnel. Si non rempli, des instructions appropriées seront affichées automatiquement."
   },
   "0ef6349f-0540-4c34-bc51-9919d38dc3ff": {
-    "original": "'{group}' is geen geldige inschrijvingsgroep (deze bestaat niet in Ravot). Zorg dat deze overeenkomt met de namen in Ravot.",
-    "translation": "'${group}' n’est pas un groupe d'inscription valide (il n’existe pas dans Ravot). Vérifie qu’il correspond aux noms utilisés dans Ravot."
+    "original": "‘{group}’ is geen geldige inschrijvingsgroep (deze bestaat niet in Ravot). Zorg dat deze overeenkomt met de namen in Ravot.",
+    "translation": "‘{group}’ n'est pas un groupe d'inscription valide (ce groupe n'existe pas dans Ravot). Veillez à ce qu'il corresponde exactement aux noms utilisés dans Ravot."
   },
   "0fa660da-1e74-4940-af88-eafafb1094b6": {
     "original": "De URI van de groep is te kort",
