--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -1739,8 +1739,8 @@
   "45193033-dfd3-4dff-a7a6-cf4bd0883b5e": "Maak het mogelijk dat leden een (optionele) vrije bijdrage doen bij het inschrijven",
   "5c0e8dda-122a-4ec9-a3ca-f8dcb2593fc7": "Verstuur e-mails vanaf je zelf gekozen e-mailadres",
   "4abf9650-55e0-45ad-8412-7570ac42117f": "Stuur automatisch e-mails naar leden als hun openstaand bedrag stijgt of als betaalherinnering.",
-  "dd8f3b31-064c-4391-9352-6ec9c15bd9a8": "Pakketten aankopen",
-  "d772b39b-b319-45ea-8b4b-2448b75ac54d": "Wijzig je pakketten of activeer nieuwe functies",
+  "dd8f3b31-064c-4391-9352-6ec9c15bd9a8": "Functionaliteiten activeren",
+  "d772b39b-b319-45ea-8b4b-2448b75ac54d": "Activeer nieuwe functies",
   "141a681a-da48-45e8-a37f-058eb042d841": "Geef 25 euro en krijg zelf ook een tegoed",
   "5dc070ea-ed3e-4684-b0b4-16a9defc4ed4": "Exporteren",
   "48533fc2-71ed-4210-96b6-f27239ebdcc7": "Cijfers exporteren",
