Changed companies setup step to general settings setup step
fixes STA-775

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -139,23 +139,23 @@
   "104dca1f-f6eb-4193-ae27-5e5f96e4e481": "Onbeperkt",
   "930218d2-2e00-4d1f-90c9-59d77c1ed377": "Optioneel. Geef een uitleg wanneer dit type activiteit gebruikt moet worden.",
   "5f232d19-085f-404b-ba36-ed9d23473414": "Mobiel nummer van ouder",
-  "0712bc3b-15d5-4678-be41-8d168e5d52cf": "Kijk na of de facturatiegegevens correct zijn en markeer het als nagekeken.",
-  "31df7737-2a25-4a6c-9766-39acc3ccdbc8": "Kijk je facturatiegegevens na",
-  "f5404f0c-96f7-4f6a-834d-7616bfbedaf3": "Bevestig dat je facturatiegegevens nagekeken zijn",
-  "457fc4b2-9145-45c8-aba3-1fd629317330": "Je hebt nog geen facturatiegegevens ingesteld. Vul dit aan.",
-  "5a8403bb-90f8-4722-8cad-b275ffa781d9": "Voeg je ontbrekende facturatiegegevens toe",
+  "0712bc3b-15d5-4678-be41-8d168e5d52cf": "Kijk na of alle gegevens nog correct zijn en markeer het als nagekeken.",
+  "31df7737-2a25-4a6c-9766-39acc3ccdbc8": "Bevestig dat je groepsgegevens correct zijn",
+  "f5404f0c-96f7-4f6a-834d-7616bfbedaf3": "Ik bevestig dat alle groepsgegevens correct zijn",
+  "457fc4b2-9145-45c8-aba3-1fd629317330": "Je hebt nog niet alle gegevens toegevoegd. Vul dit aan.",
+  "5a8403bb-90f8-4722-8cad-b275ffa781d9": "Voeg je ontbrekende groepsgegevens toe",
   "96c10e6b-3974-40d4-8844-70b0b2fa110e": "Bevestig dat iedereen de juiste functies heeft gekregen.",
   "1d0d59b8-d7bf-4f04-846f-5025d7de7b4e": "Bevestig dat alle functies zijn toegekend",
-  "1ee738ae-a91d-474e-a495-996bf431126a": "Bevestig dat alle functies zijn toegekend",
+  "1ee738ae-a91d-474e-a495-996bf431126a": "Ik bevestig dat alle functies zijn toegekend",
   "f3236c83-b7ba-453f-981a-3e06925c9b7a": "Geef iedereen toegang tot #platform door ze de juiste functies te geven.",
   "268546f2-5dd0-492c-8680-e93b5d40807d": "Ken alle verplichte functies toe aan je leidingsploeg",
   "f0f98f5d-83bc-45fe-a5f1-1b8f2decbdf0": "Ik heb alle leeftijdsgroepen nagekeken",
   "c965f4a7-4dc3-4201-961e-65f1a9eb7f89": "Kijk of de prijzen, de leeftijd en de beschrijving correct zijn ingesteld.",
   "11ad8aa2-5aea-400b-8fe1-90e8495c1395": "Bevestig dat je leeftijdsgroepen in orde zijn",
-  "3124147c-09cf-4a87-8ae8-9545b90c1ba4": "Bevestig dat je leeftijdsgroepen in orde zijn",
+  "3124147c-09cf-4a87-8ae8-9545b90c1ba4": "Ik bevestig dat alle leeftijdsgroepen in orde zijn",
   "03ffd28c-99d4-4bae-8494-5def382d826e": "Voeg alle lokalen toe en kijk of de gegevens nog up-to-date zijn.",
   "19cc6e71-9cd7-41d8-84d0-2c8828bd92c4": "Bevestig dat alle lokalen nagekeken zijn",
-  "0d7093d6-d3c0-412e-af8a-d44a5d2394d9": "Bevestig dat alle lokalen nagekeken zijn",
+  "0d7093d6-d3c0-412e-af8a-d44a5d2394d9": "Ik bevestig dat alle lokalen nagekeken zijn",
   "05afcd20-5dda-4e01-88a7-e58d46487d30": "Voeg minstens één lokaal toe.",
   "5c37d309-63da-44af-8eec-fb593b8bad31": "Voeg alle te verzekeren lokalen toe",
   "9eb28669-42a5-4211-b72f-3335c0d4b329": "Voeg minstens één standaard e-mailadres toe.",
@@ -165,7 +165,7 @@
   "da415fb3-06f2-45eb-9230-ef56bcd52970": "Voeg een standaard e-mailadres toe",
   "70894bb8-da5a-4f1a-929d-08f4479c4de3": "Bevestig dat de betaalmethodes correct zijn ingesteld. Deze betaalmethodes worden gebruikt als leden inschrijven via #platform.",
   "db69887c-b23a-4779-b945-cbe5d02856a7": "Bevestig de betaalmethodes voor inschrijvingen",
-  "b831d108-6aa9-4e6e-97ce-9f50a1cab9e1": "Bevestig dat de betaalmethodes correct zijn ingesteld",
+  "b831d108-6aa9-4e6e-97ce-9f50a1cab9e1": "Ik bevestig dat de betaalmethodes correct zijn ingesteld",
   "953003c6-6653-4cef-a2ca-09723658b828": "Voeg minstens één betaalmethode toe.",
   "8587ff64-b9b5-4e57-84b1-4afd342ffec3": "Voeg betaalmethode toe",
   "622c0dd7-cddd-4417-9bfd-5f6aca2480f5": "Adres",
@@ -314,7 +314,7 @@
   "586cb220-498a-496a-8db5-89a4f10ba3df": "Niet nagekeken",
   "b183b823-481c-46b1-951d-8a68dccc2517": "Selecteer alles",
   "be92d7b0-92ad-42d6-b9e2-b414671ac57d": "Functies",
-  "6313a021-6795-4b7e-842c-f4574e433324": "Facturatiegegevens",
+  "6313a021-6795-4b7e-842c-f4574e433324": "Groepsgegevens",
   "b6458e9c-2ddf-4cb0-8051-fb6a220c4127": "Leeftijdsgroepen",
   "7f531562-9609-456e-a8c3-2b373cad3f29": "Lokalen",
   "36a44efc-4cb0-4180-8678-938cc51d3ae8": "E-mailadressen",
