--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5377,5 +5377,126 @@
   "4bc1cd70-a8ea-45c0-b9c6-c95a4d766990": "Niet alle opgegeven UiTPAS-nummers zijn geldig. Controleer de nummers en probeer het opnieuw.",
   "306cb08e-ed29-4bbc-acba-ee7a322e58dd": "Jouw bestand is klaar, download het hier",
   "1adf1842-a0c1-4428-92d8-a8c760e79cf1": "Downloaden",
-  "60021a05-e01f-4fda-b12e-8aa8046a2f07": "Maak een keuze voor '{option_menu_name}'"
+  "60021a05-e01f-4fda-b12e-8aa8046a2f07": "Maak een keuze voor '{option_menu_name}'",
+  "ec6a555e-6bb1-4b5f-b17e-38eaa8a478b5": "Je kan een functie enkel toekennen aan leden die zijn ingeschreven in het huidige werkjaar voor een standaard leeftijdsgroep",
+  "510807a1-d4c7-45fa-9e3b-ddc8764d3f6e": "{member} is al gekend in ons systeem, maar jouw e-mailadres niet. Om toegang te krijgen heb je de beveiligingscode nodig.",
+  "d8937ba8-6689-4c76-9841-d5a00c99074b": "Je kan de status van de UiTPAS-credentials niet handmatig instellen",
+  "9b9ec483-63b8-4696-ade6-0eb18f9008e6": "Je moet een client id opgeven.",
+  "58de00fb-3b0a-45a6-9214-7d11b4175779": "Je moet een client secret opgeven.",
+  "bbc79280-7ae2-4b8d-a900-2d7cbb552428": "Je kan niet enkel de client id wijzigen. Geef ook de client secret in.",
+  "80fcde9c-c8c7-4fe1-b9a6-51684a23d850": "Stel eerst een UiTPAS-organisator in.",
+  "42bbd5c0-8789-4ca1-b667-1c9ecf4d0190": "De opgegeven client credentials zijn niet geldig.",
+  "aaf56535-c13b-4f92-9ba4-7309cae3e078": "Deze organisatie heeft nog geen UiTPAS-organisatie ingesteld. Stel dit in via de algemene instellingen.",
+  "2d1983fa-2224-422f-9ea0-fdae77cb4914": "Het kansentarief voor sommige UiTPAS-nummers kon niet worden opgehaald.",
+  "2f4b9572-4b9c-42e0-91f1-b0984624d225": "Het kansentarief voor deze UiTPAS is {correctPrice} in plaats van {orderPrice}.",
+  "71a8218b-c58e-4e95-9626-551b80eb8367": "UiTPAS is niet volledig geconfigureerd, contacteer de platformbeheerder.",
+  "6b333cb4-21fd-42be-b0c9-6d899f2fd348": "UiTPAS is nog niet volledig geconfigureerd voor deze organisatie.",
+  "1086bb24-5df4-4faf-9dc0-ab5a955b0d8f": "De opgegeven UiTPAS client credentials zijn ongeldig. Controleer ze en probeer opnieuw.",
+  "f7eea411-fb92-458f-bf3e-e36ed870591b": "Er is een fout opgetreden bij het registreren van de UiTPAS ticket verkoop. Probeer het later opnieuw.",
+  "ed4e876c-6a40-49a7-ab65-2a4d5f31c13f": "Er is een fout opgetreden bij het verbinden met UiTPAS. Probeer het later opnieuw.",
+  "7d3a6b57-f81a-4d58-bc2b-babb2261c40b": "Er is iets misgelopen bij het ophalen van je rechten. Probeer het later opnieuw.",
+  "6d35156d-e452-4b0f-80f4-b1e9024d08ee": " en ",
+  "96c8a719-dba5-47ce-bb61-ee0754a5f776": "Jouw UiTPAS-integratie heeft geen toegansrechten tot de geselecteerde UiTPAS-organisator, maar wel tot ",
+  "040fa935-5cbc-4a85-b578-354bf9d7fc04": "Jouw UiTPAS-integratie mist de volgende toegangsrechten voor de geselecteerde UiTPAS-organisator: ",
+  "542b793c-3edf-4505-b33d-199ea409bbda": "We konden UiTPAS niet bereiken om de rechten te controleren. Probeer het later opnieuw.",
+  "93004d03-955a-4a9a-937d-2f30841dc5cc": "Er is een fout opgetreden bij het communiceren met UiTPAS. Probeer het later opnieuw.",
+  "4c6482ff-e6d9-4ea1-b11d-e12d697b4b7b": "Er is een fout opgetreden bij het ophalen van je UiTPAS. Kijk je het nummer even na?",
+  "a56854af-464a-45a4-8c39-10a9264b6ce4": "Er is een fout opgetreden bij het ophalen van het kansentarief voor dit evenement. Probeer het later opnieuw.",
+  "85fb6e02-9b69-43cc-acf7-96a576461560": "De opgegeven UiTPAS-evenement URL is ongeldig.",
+  "ccd8e8b4-01a7-4e7c-8ae0-92d2a4c659eb": "Er is geen kansentarief beschikbaar voor dit evenement.",
+  "466844b9-c042-4bc7-b77d-3f87376086b5": "Er is een fout opgetreden bij het ophalen van het kansentarief voor jouw UiTPAS-nummer. Probeer het later opnieuw.",
+  "1572d069-abda-4b31-a373-f0c3760c79b1": "Er is een fout opgetreden bij het ophalen van je UiTPAS kansentarief. Kijk je het nummer even na?",
+  "f9d6bc51-e7c9-4d3f-a13f-27871a018d83": "Je hebt recht op UiTPAS-kansentarief maar het overblijvend aantal is niet voldoende.",
+  "f5cac12d-ced6-43e6-bbd9-81b381807154": "Er is een fout opgetreden bij het registreren van de UiTPAS-ticketverkoop.",
+  "0b610eb8-551f-4ef6-acdc-fb3267dfc2a8": "Er is een fout opgetreden bij het ophalen van de UiTPAS-evenementen.",
+  "0009cce2-9d13-4f03-9258-345d8f8e396e": "Er is geen UiTPAS client ID geconfigureerd voor deze organisatie.",
+  "e1aab1a7-fded-4e5e-b994-6607684764ac": "Er is een fout opgetreden bij het zoeken naar UiTPAS-organisaties. Probeer het later opnieuw.",
+  "963105d8-a70a-4ba4-9ddc-b7f908d44664": "Je moet een naam opgeven om UiTPAS-organisaties te zoeken.",
+  "3560487e-3f2c-4cc9-ad7f-4e9a0fc1bbb8": "Je hebt niet voldoende toegangsrechten om te filteren op {recordName}",
+  "2ed46ae7-03d8-4a9c-8555-0edfc7157d53": "Ongeldig GSM-nummer. Als je een nummer probeert in te geven uit een ander land dan België, voeg dan de internationale code toe voor het nummer. Voor Nederland is dat bijvoorbeeld +31.",
+  "0bf875c9-f6a8-417d-82dd-4d6bfff9669f": "Ongeldig GSM-nummer",
+  "34a37057-5c76-43ea-bc79-e67b8b09a4ee": "Beveiligingscode",
+  "c112eac2-2515-4476-81d1-e8dc51bc063c": "Koppel je UiTPAS-organisator",
+  "1b313bdc-e15f-4633-9bcf-969e55139b94": "Beheer je UiTPAS-integratie",
+  "b6334ba0-a28d-4ee4-b443-03f293473249": "Sluit aan bij UiTPAS, zodat je gemeente tussenkomt in het UiTPAS-kansentarief.",
+  "bb419e01-886f-47b1-b1d9-2a3ef7094c92": "Koppel met UiTPAS",
+  "50c110d0-67dd-4733-9fb1-49a1a541e2bd": "Door #platform en UiTPAS aan elkaar te koppelen kan je een automatische terugbetaling krijgen voor elke verkoop met UiTPAS-kansentarief. Eerst moet je een officiële UiTPAS-organisator worden, zo weet men aan wie de terugbetaling moet gebeuren. Nadien moet je een integratie aanmaken op de website van <button>Publiq</button>. Geef nadien de gegevens van die integratie hieronder in. Tot slot zal je bij elk artikel uit de webshop een evenement uit de UiTdatabank moeten koppelen.",
+  "549c952e-347f-4b1d-ae55-b645636e2522": "UiTPAS-organisator",
+  "87e8488b-4190-42d9-bdd0-564a46671f7f": "Zoek jouw vereniging in de UiTPAS organisatoren lijst.",
+  "3b95fc70-7928-426b-b65b-3389d9e762cc": "Wijzig",
+  "8012defc-bf79-4ee5-b8f4-6e6cc5242bf8": "Zoeken",
+  "0c503313-92c1-4063-887d-87bbff5a6e53": "Configuur UiTPAS-integratie",
+  "aa6ef361-7d1f-4a9a-a7e1-644958739117": "Configureer",
+  "1e92a151-6161-4941-aa3f-fa69e14f75ee": "UiTPAS-evenement",
+  "c4fa8a72-56cd-4b5c-ae12-6533a493bac6": "Zoek jouw evenement in de UiTPAS lijst.",
+  "2c7dc287-58ab-423b-984a-b0582c992b4d": "Zoek je UiTPAS-organisator",
+  "d37c7255-33dd-42a8-872d-0c719307f842": "Zoek je UiTPAS-evenement",
+  "1153ea0d-ec79-4677-aea9-d2f293cdfe57": "Bezig met importeren",
+  "aaca8552-d08b-45d4-a068-3e441ceb1142": "Sommige leden hebben een groep zonder wachtlijst. Deze zullen meteen voor de groep worden ingeschreven en niet voor een wachtlijst. Deze groepen hebben geen wachtlijst: {groups}.",
+  "70c70815-5095-4eb7-9eb2-f93cb1660135": "Inschrijven voor wachtlijst '{group}'",
+  "29e73b62-658a-4203-8c05-c4a39f4dc01d": "Toevoegen in het systeem met inschrijving voor wachtlijst '{group}'",
+  "c43f7c56-b6f3-4de5-a543-c4c0c2b8cb6e": "Er werd géén UiTPAS-evemenent gekoppeld, je krijgt géén automatische terugbetaling van je UiTPAS-regio.",
+  "489734b2-e7e2-4c5e-a9ad-d00c29dc4f8e": "UiTPAS-evenement koppelen",
+  "8b74f225-07a7-4b5e-b937-4d479c888789": "Controleer de instellingen",
+  "7ec9bfd6-8d4c-4f45-a5e8-7979c747de64": "Ontkoppel",
+  "d0c76989-c11b-4eef-ac8f-3c76e9ad315e": "Elk ticket moet een UiTPAS-evenement gekoppeld hebben om een automatische terugbetaling te krijgen van je UiTPAS-regio.",
+  "8e328465-ed68-4f9a-92ba-8c2e172bb521": "Kortingen bij de UiTPAS officiële flow zijn niet mogelijk.",
+  "759abb2c-48d9-4eb6-bf3a-bd8284b28ffa": "Dit lid is niet ingeschreven voor een standaard leeftijdsgroep in het huidige werkjaar. Verwijder de functie of schrijf het lid in voor het huidige werkjaar.",
+  "c8da000d-cfa8-4ceb-8ea0-87c464271eb8": "Het sociaal tarief kon niet worden berekend. Probeer het later opnieuw.",
+  "5410f959-ba95-4c7e-9331-1d1147ac85b2": "Je gebruikt de niet-officiële UiTPAS-flow",
+  "7646c809-e882-46d6-9a5a-24e83087f70e": "Doorgaan zonder terugbetalingen",
+  "6cd858a4-8cc5-42fc-9ca2-a87d1ee13d6b": "De toegepaste kortingen worden niet geregistreerd en je ontvangt geen automatische terugbetaling van UiTPAS. Wil je dit toch, configureer dan je UiTPAS-integratie in de instellingen.",
+  "b59d4150-23bd-4014-9600-37b2ef667e06": "Ga naar instellingen",
+  "235434e9-4d87-49a9-b4ce-26e7ee397b62": "UiTPAS evenement gekoppeld",
+  "7e0a683f-f409-4fbe-b463-46ec451951cd": "UiTPAS gekoppeld",
+  "5696e0d8-a405-4087-b9bb-4bda3c9baab1": "Er is een fout opgetreden bij het ophalen van het UiTPAS-evenement.",
+  "198e7383-2512-4f6f-b919-2b4225b8e2a9": "Je kan de instellingen van deze webshop bewerken via het beheerdersportaal van deze vereniging.",
+  "dd4ec83e-2d84-406b-9f3b-4fb1ba3e6fc7": "De webshop kon niet geladen worden.",
+  "449df98c-76b7-49b5-b807-9a431336fa86": "Ga naar het beheerdersportaal van een vereniging (die zal als organisator dienen) om een webshop te koppelen aan deze activiteit.",
+  "4953cb1c-9ba5-40a6-91ad-c25cda4cdfcc": "Vragenlijsten",
+  "9c92d16b-947d-4a06-bed4-054d8223d5cb": "Vereniging ID",
+  "58f56570-0bcc-4ec1-a42e-94dbf2677bc2": "Bedrijfstype",
+  "1c5b447a-93e8-46da-b6e1-ffc29a2967e8": "Feitelijke vereniging",
+  "1ca52417-1476-4cbb-a240-335a18fedf45": "De gekoppelde bedrijfsgegevens, vzw of feitelijke vereniging. Een groep kan meerdere gekoppelde entiteiten hebben.",
+  "e420367f-7ce9-4dd3-95b7-c24d0649cb59": "Niet ingevuld",
+  "c10884fe-e858-48f6-875b-a1132c618df3": "Ondernemingsnummer",
+  "263b7054-d38f-4bb9-be63-84b4e614613d": "BTW-nummer",
+  "d6244dd4-a0b6-4063-9f93-91c5ab91905c": "Facturatiegegevens",
+  "761ba5a0-8f9b-4c87-b3d0-559e3f6e8d92": "Beschikbaar vanaf {date}",
+  "543f5147-f7a5-430b-9b20-b974e809627d": "Onbeschikbaar na {date}",
+  "9128e6d1-9772-4258-b1e6-5d271b71727f": "Beschikbaar vanaf datum",
+  "163c78b9-f0dd-4ec5-bdfe-32b389aeda7d": "Onbeschikbaar na datum",
+  "6ada0ff0-3976-41f7-aa65-7af870964ebc": "Beschikbaarheid",
+  "5e3928ce-0e62-402f-bf9a-5151a63cc759": "De \"onbeschikbaar na datum\" moet na de \"beschikbaar vanaf datum\" zijn.",
+  "083c0978-adfc-44c6-8007-40c883cd4fc9": "Geen datum",
+  "25d1906f-b5b8-441c-8ff7-2e41a75d13e4": "Beschikbaar tussen: {range}",
+  "699edd60-afb0-4c4d-aac5-58f7a6b0ff1f": "Deze functie is ongeldig omdat {name} niet is ingeschreven voor een standaard leeftijdsgroep. Deze functie zal automatisch verwijderd worden op het einde van de maand.",
+  "8a9b7083-6a55-400f-a244-7513385c3a8a": "Berekenen...",
+  "ff27568d-d68a-46f7-bf6f-1fd4564ac3b3": "Door een evenement uit de UiTdatabank te koppelen kan #platform een verkoop met kansentarief registreren bij jouw UiTPAS-regio. Je krijgt dan automatisch een (gedeeltelijke) terugbetaling en jouw regio bepaalt het kansentarief.",
+  "4d88d9eb-24f1-42f9-8575-6a6e5f22b1ba": "Wil je de UiTPAS-nummers niet doorsturen en zelf het tarief instellen, <button>klik dan hier</button>.",
+  "3e63b101-0a81-444c-af7b-8827fd8872f0": "Zoek op naam, locatie, beschrijving, ...",
+  "1b51e5e9-5ba2-4924-948e-a431f0fc1a9a": "Geen evenementen gevonden.",
+  "4499fa60-aaf1-49a7-bb3a-cba68337a3c3": "UiTPAS-evenement zoeken",
+  "4b55bf53-f867-4613-b375-fe9a35be2cbc": "Zoek op naam",
+  "e8835291-6b19-49dc-9888-fa0b2161d24a": "Geen organisatoren gevonden.",
+  "695dc336-3540-44b5-b990-66367f08af00": "UiTPAS-organisator zoeken",
+  "aafe1357-1b66-4122-beb0-b773a933a477": "UiTPAS-integratie",
+  "b364c428-7d28-418e-9dba-08bce39433b2": "Haal de gegevens op uit het",
+  "fa9e3bb7-5491-47f8-8939-0370767107b9": "Publiq platform",
+  "5658edc2-ca76-4463-8729-6b7438249d91": ".",
+  "63b4a0d5-b7a6-416f-8ac1-68fcdc4e88f6": "Client id",
+  "74235c2d-fe1f-4d38-821e-2ace113152ef": "Plak hier je client id",
+  "c9e33324-eb11-44af-8701-0ef6b4c322e6": "Client secret",
+  "9a3796e7-0eeb-495a-9289-74fbcec07a0c": "Plak hier je client secret",
+  "eaeba023-03b7-480d-8e2f-4849d7585909": "Vul een client secret in",
+  "76dfb997-817a-4d98-8ba3-0daacd0f5957": "Vul een client id in",
+  "f74892f9-d541-42b2-a398-3aa757c5ebd9": "Jouw UiTPAS geeft recht op een sociaal tarief van {specificPrice} in plaats van het standaard sociaal tarief van {generalPrice}",
+  "17b0fd6e-71a8-41fc-98e2-af859370aac8": "Er zijn tijdstippen waarop geen enkel tarief beschikbaar is. Controleer of de begin en einddatum (en tijdstip) van tarieven mooi op elkaar aansluiten.",
+  "22487e0a-3bb0-4cb2-80c0-18fea6f3f016": "Toegangsrechten van jouw UiTPAS-integratie is nog niet gecontroleerd",
+  "8b9c3203-aaea-4699-b274-2ac2eff7ec1d": "Jouw UiTPAS-integratie is niet (meer) ingesteld",
+  "a24c0731-1c0f-46e2-8aaa-4569f6e0cc91": "Jouw UiTPAS-integratie heeft geen toegansrechten tot de UiTPAS-organisator",
+  "f3a5ff8c-f79e-474e-9e3e-5e85467f5770": "Jouw UiTPAS-integratie heeft onvoldoende toegangsrechten",
+  "c2e9194d-82b6-441a-ad47-bbac687667dd": "Jouw UiTPAS-integratie is ingesteld en geldig",
+  "bc608e45-810c-4dd3-82f7-3eb2befc4ffc": "Het gekozen tarief is niet toepasbaar voor deze datum.",
+  "621c533c-23fe-43b5-b493-a4352ac479d2": "Kijk dit nog even na"
 }
